(test
 (name t_reader)
 (libraries IALE xml-light)
 (deps (file %{project_root}/test/hello_world.xml))
)

(rule 
 (target export.mlw)
 (action (run ./t_export.exe))
)
(test
 (name t_export)
 (libraries IALE)
 (action (diff export.mlw.expected export.mlw))
)

(test
 (name t_ld)
 (libraries IALE)
 (deps (file %{project_root}/test/hello_world.xml))
)

; (test
;  (name il)
;  (libraries IALE)
;  (deps (file %{project_root}/test/hello_world.xml))
; )